implement 01-fintech-ledger: H2/HikariCP JDBC, Micrometer, concurrent harness, Grafana provisioning
- Replace stub MiniHttpServer with real JDBC+HikariCP+Micrometer server
- H2 in-memory DB with accounts/transactions schema, 2000 seeded accounts
- POST /transfers: real JDBC transaction with SELECT FOR UPDATE, fraud check
- PrometheusMeterRegistry with JVM/GC/CPU binders
- Virtual thread executor (Project Loom)
- app/run.sh: downloads required JARs from Maven Central at runtime
- BenchmarkHarness: concurrent ExecutorService, wall-clock throughput, real GC/RSS/CPU KPIs
- Grafana: provisioning YAML, 4-panel dashboard (throughput, p99, GC, DB pool)
- Smoke test: PASS (rss_mb=105, throughput=342 rps)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>